--- a/frontend/src/style/mixins.scss
+++ b/frontend/src/style/mixins.scss
@@ -233,11 +233,18 @@
             margin: 0;
         }
 
-        button.close {
+        .actions-zone {
             position: absolute;
             top: 15px;
             right: 15px;
             color: black;
+
+
+            > button {
+                border: none;
+                background: transparent;
+                margin-left: 10px;
+            }
         }
     }
 
@@ -267,7 +274,7 @@
     // Mobile
     @media (max-width: $min-width-mobile) {
         .modal-title {
-            padding: 20px 40px 20px 20px;
+            padding: 50px 40px 20px 20px;
             h1, strong { font-size: 1.3em; }
         }
         .modal-body {
