--- a/frontend/src/style/global.scss
+++ b/frontend/src/style/global.scss
@@ -188,7 +188,7 @@ input[type=text], input[type=email] {
 
 
 // Mapbox clusters
-.marker-cluster-small { background-color: rgba(181, 226, 140, 0.9); }
+/*.marker-cluster-small { background-color: rgba(181, 226, 140, 0.9); }
 .marker-cluster-small div { background-color: rgba(110, 204, 57, 0.9); }
 
 .marker-cluster-medium { background-color: rgba(241, 211, 87, 0.9); }
@@ -196,21 +196,26 @@ input[type=text], input[type=email] {
 
 .marker-cluster-large {	background-color: rgba(253, 156, 115, 0.9); }
 .marker-cluster-large div {	background-color: rgba(241, 128, 23, 0.9); }
+*/
+
 
 .marker-cluster {
     background-clip: padding-box;
-	border-radius: 20px;
 }
 
 .marker-cluster div {
-	width: 30px;
-	height: 30px;
-	margin-left: 5px;
-	margin-top: 5px;
+    margin-left: 5px;
+    margin-top: 5px;
+    width: 24px;
+    height: 34px;
+    background: url(/static/img/markers/marker-groupe.svg) no-repeat;
 
-	text-align: center;
-	border-radius: 15px;
-	font: 12px "Helvetica Neue", Arial, Helvetica, sans-serif;
+    text-align: center;
+    color: white;
+    opacity: 1;
+
+    font-weight: bolder;
+    font-size: 16px;
 }
 
 .marker-cluster span {
