Separate soft-skills and application-advices blocks

--- a/frontend/src/components/companies/companies.scss
+++ b/frontend/src/components/companies/companies.scss
@@ -568,6 +568,8 @@ $flex-right: 5;
             font-size: .95em;
             line-height: 20px;
         }
+
+        .soft-skills, .application-advices { padding: 0 10px; }
         .soft-skills {
             h4 { margin-bottom: 5px; }
         }
