--- a/frontend/src/style/mixins.scss
+++ b/frontend/src/style/mixins.scss
@@ -232,6 +232,10 @@
             font-size: 1.5em;
             margin: 0;
         }
+        strong {
+            display: block;
+            margin-top: 35px;
+        }
 
         .actions-zone {
             position: absolute;
